SD-521: add blockchain config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.flyway.schemas=payout_service
 spring.flyway.default-schema=payout_service
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
+
+com.ampnet.payoutservice.infura-id=${INFURA_ID}
