SD-521: PR fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.flyway.default-schema=payout_service
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
-com.ampnet.payoutservice.infura-id=${INFURA_ID}
+payoutservice.infura-id=${INFURA_ID}
