SD-526: add tests

--- a/src/integTest/resources/application-test.properties
+++ b/src/integTest/resources/application-test.properties
@@ -10,3 +10,6 @@ spring.flyway.default-schema=payout_service
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
 payoutservice.infura-id=
+payoutservice.ipfs.url=http://localhost:8090/
+payoutservice.ipfs.apiKey=test-api-key
+payoutservice.ipfs.secretApiKey=test-api-secret
