--- a/src/apiTest/resources/application-test.properties
+++ b/src/apiTest/resources/application-test.properties
@@ -9,7 +9,7 @@ spring.flyway.default-schema=payout_service
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcAutoConfiguration
 
-payoutservice.infura-id=
+payoutservice.infura-id=${HARDHAT_PORT}
 payoutservice.ipfs.url=http://localhost:8090/
 payoutservice.ipfs.apiKey=test-api-key
 payoutservice.ipfs.secretApiKey=test-api-secret
