SD-524: PR fixes

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,5 +11,6 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.r2dbc.R2dbcA
 
 payoutservice.infura-id=${HARDHAT_PORT}
 payoutservice.ipfs.url=http://localhost:8090/
-payoutservice.ipfs.apiKey=test-api-key
-payoutservice.ipfs.secretApiKey=test-api-secret
+payoutservice.ipfs.api-key=test-api-key
+payoutservice.ipfs.secret-api-key=test-api-secret
+payoutservice.payout.check-asset-owner=true
