SD-605: add prometheus to payout service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-management.endpoints.web.exposure.include=info,health
+management.endpoint.prometheus.enabled=false
+management.endpoints.web.exposure.include=info,health,prometheus
 
 spring.application.name=payout-service
 
